# bonesistools

./: .gitattributes  .gitignore  MANIFEST.in  README.md  __init__.py  apl.zginml  pyproject.toml  pyrightconfig.ci.json  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: publish.yml  tests.yml  typecheck.yml
anndatatools/: __init__.py  _check_anndata.py  _typing.py  setup.py
anndatatools/plotting/: __init__.py  _colors.py  _figure.py  _graphplot.py  _kde.py  _scatterplot.py
anndatatools/preprocessing/: __init__.py  _genename.py  _simple.py
anndatatools/tools/: __init__.py  _clusters.py  _conversion.py  _graph.py  _markers.py  _maths.py  _neighbors.py  _write.py
bonesis_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bonesistools/boolpy/: _algebra.py
bonesistools/databases/collectri/: _collectri.py
bonesistools/databases/ncbi/: _genesyn.py
bonesistools/grntools/: _graphinfo.py
bonesistools/sctools/: _typing.py
bonesistools/sctools/plotting/: _colors.py  _graphplot.py  _kde.py  _scatterplot.py
bonesistools/sctools/preprocessing/: _genename.py  _simple.py
bonesistools/sctools/tools/: _classification.py  _graph.py  _markers.py  _maths.py  _neighbors.py  _utils.py
boolpy/: __init__.py  _boolean.py
boolpy/algebra/: __init__.py  _bdc.py
clitools/: adata_conversion.py  add_to_adata.py  anndata2csv.py  conversion_to_h5ad.py  genename.py  genename_standardization.py  get_genes.py  zginml_to_bnet.py
clitools/bn/: get_nodes.py
clitools/format/: h5ad_to_csv.py
clitools/plot/: gene_kde.py
databases/: __init__.py  collectri.py  genesyn.py
databases/.ncbi_gi/: .escherichia_coli_gene_info.tsv
databases/collectri/: _collectri.py
databases/ncbi/: _genesyn.py
docs/: ARCHITECTURE.md  BOOLEAN.md  DEVELOPMENT.md  LOGIC.md  REPRODUCIBILITY.md  TESTING.md  architecture.md
grntools/: __init__.py
grntools/algorithms/: __init__.py  _depth_first.py
grntools/grn/: __init__.py  _graphinfo.py
grntools/grn/example/: ADT.csv  hemamox_graph_analysis.py
pipeline/binarization/: bin_clusters.py  differential_analysis.py
pipeline/bonesis/: design_bo.py  infer_bo.py  plzf_rara_model.py  plzf_rara_model.txt
pipeline/preprocess/: analyse_markers.py  clusterization.py  filter_cells.py  integration.py  label_clusters.py  load_10X.py  load_signatures.py  normalization.py
pipeline/stream/: pseudotime.py  trajectories.py
sctools/: __init__.py  _typing.py
sctools/plotting/: _colors.py  _kde.py  _scatterplot.py
sctools/preprocessing/: __init__.py  _genename.py  _simple.py
sctools/tools/: __init__.py  _classification.py  _clusters.py  _conversion.py  _markers.py  _maths.py  _neighbors.py  _utils.py
src/bonesistools/: __init__.py  __init__.pyi  _compat.py  _metadata.py  _typing.py  _validation.py  _warnings.py
src/bonesistools/boolpy/: __init__.py  __init__.pyi  _bnet.py  _boolean.py  _graphviz.py  _hypercube.py  _networks.py  _typing.py
src/bonesistools/databases/: __init__.py  __init__.pyi  _typing.py
src/bonesistools/grntools/: __init__.py  _algorithms.py  _graphinfo.py  _parser.py  graph_analysis.py
src/bonesistools/logic/: __init__.py
src/bonesistools/omics/: __init__.py  __init__.pyi  _dependencies.py  _typing.py  _validation.py
src/bonesistools/resources/: __init__.py  __init__.pyi  cache.py  cache.pyi
src/bonesistools/sctools/: __init__.py  __init__.pyi  _dependencies.py  _metadata.py  _stats.py  _typing.py  _validation.py
src/databases/: __init__.py
tests/: __init__.py  test_import.py  test_validation.py
tests/boolpy/: test_boolean_network.py  test_hypercube.py  test_hypercube_collection.py  test_partial_boolean.py
tests/bpy/: conftest.py  test_aggregated_influence_graph.py  test_boolean_algebra.py  test_boolean_network.py  test_boolean_network_ensemble.py  test_hypercube.py  test_hypercube_collection.py  test_influence_graph.py  test_influence_graph_distances.py  test_influence_graph_parser.py  test_influence_graph_scoring.py  test_interaction_graph_parser.py  test_interaction_graph_scoring.py  test_partial_boolean.py  test_plotting_styles.py
tests/data/: nestorowa_tiny.h5ad
tests/dbs/: test_hcop.py  test_hcop_orthologs.py  test_ncbi.py  test_omnipath.py  test_omnipath_integration.py  test_omnipath_reproducibility.py
tests/dbs/data/: dorothea_legacy_mouse.sha256
tests/golden/: LICENSE.txt  README.md  __init__.py  _boolean_workflow.py  _omics_workflow.py  _workflow.py  conftest.py  generate_expected.py  test_golden_omics_workflow.py  test_golden_workflow.py  test_pbmc3k.py
tests/golden/expected/: hvg_loess.npz  pca.npz  qc.npz  spectral.npz  umap.npz
tests/golden/logic/: _boolean_workflow.py  _graph_layout.py  test_golden_boolean_workflow.py  test_golden_graph_layout.py  test_golden_sea_urchin.py
tests/golden/omics/: _omics_workflow.py  _tsne_diagnostics.py  _umap_diagnostics.py  test_golden_omics_workflow.py  test_golden_tsne_diagnostics.py  test_golden_umap_diagnostics.py
tests/regression/: test_import.py
tests/regression/bpy/: conftest.py  test_aggregated_influence_graph.py  test_boolean_algebra.py  test_boolean_network.py  test_hypercube_collection.py  test_influence_graph.py  test_plotting_styles.py
tests/regression/dbs/: test_omnipath.py
tests/regression/omics/: conftest.py  test_typing.py
tests/regression/resources/: test_cache.py  test_hcop.py  test_ncbi.py  test_omnipath.py
tests/regression/sct/: __init__.py  conftest.py  test_typing.py
tests/reproducibility/: __init__.py  dorothea_current_mouse_A.sha256  dorothea_modern_mouse_A_2025-08-13.sha256  test_reproducibility_boolean_backends.py  test_reproducibility_omnipath.py  test_reproducibility_stats.py  test_reproducibility_workflow.py  test_stats.py
tests/sct/: conftest.py  test_knnbs.py  test_plotting.py  test_preprocessing.py  test_typing.py  toy_data.py
tests/sct/datasets/: test_geo.py  test_nestorowa.py
tests/sct/plotting/: test_barplot.py  test_boxplot.py  test_colors.py  test_density.py  (+5 more)
utils/: __init__.py  argtype.py  stdout.py
utils/cmd/: __init__.py  _arg.py
utils/std/: __init__.py  _stdout.py
(+352 files in other folders)
