[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonesistools"
description = "Bioinformatics toolkit for upstream and downstream analyses around the BoNesis framework"
version = "1.2.4"
license = {file = "LICENSE"}
credits = ["BNeDiction", "PEPR Santé Numérique 2030"]
authors = [
    { name = "Théo Roncalli" },
]
maintainers = [
    { name = "Théo Roncalli", email = "theo.roncalli@labri.fr" },
]
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Framework :: IPython",
    "Framework :: Matplotlib",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
]
requires-python = ">=3.7"
dependencies = [
    "importlib_resources; python_version < '3.9'",
    "typing-extensions>=4.0",
    "numpy>=1.21",
    "pandas>=1.3.5",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "networkx>=2.1",
    "matplotlib>=3.5",
    "h5py>=3.7",
    "anndata>=0.8",
    "boolean.py>=4.0",
]
keywords = [
    "bioinformatics",
    "systems-biology",
    "single-cell",
    "rnaseq",
    "atacseq",
    "boolean-networks",
    "anndata",
    "mudata",
    "gene-regulatory-networks",
    "bonesis",
]

[project.optional-dependencies]
all = [
    "graphviz>=0.20",
    "mudata>=0.3.1",
    "multiprocess>=0.70.18",
    "pydot>=3.0.2",
    "igraph>=0.10",
    "leidenalg>=0.10",
    "seaborn>=0.11",
    "umap-learn>=0.5",
    "mpbn>=4.1",
]
graphviz = [ "graphviz>=0.20" ]
mudata = [ "mudata>=0.3.1" ]
mpbn = [ "mpbn>=4.1" ]
sctools = [
    "igraph>=0.10",
    "leidenalg>=0.10",
    "umap-learn>=0.5",
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
    "*.py",
    "src/bonesistools/py.typed",
    "src/bonesistools/databases/hcop/data/*.tsv.gz",
    "src/bonesistools/databases/ncbi/data/gi/*.tsv.gz",
    "src/bonesistools/sctools/datasets/*.h5ad",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/bonesistools" ]
artifacts = [
    "src/bonesistools/databases/hcop/data/*.tsv.gz",
    "src/bonesistools/databases/ncbi/data/gi/*.tsv.gz",
]

[project.urls]
Repository = "https://github.com/bnediction/bonesistools"

[tool.black]
target-version = ["py37"]

[tool.ruff]
target-version = "py37"
line-length = 88
extend-exclude = ["ensemble"]

[tool.ruff.lint]
select = ["E", "F", "I"]
typing-modules = ["bonesistools._compat"]

[tool.pytest.ini_options]
norecursedirs = [
    "tests/reproducibility",
]
filterwarnings = [
    "ignore:The NumPy module was reloaded:UserWarning",
]
