[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonesistools"
description = "Bioinformatics toolkit for upstream and downstream analyses around the BoNesis framework"
version = "1.4.0"
license = "CECILL-2.1"
credits = ["BNeDiction", "PEPR Santé Numérique 2030"]
authors = [
    { name = "Théo Roncalli" },
]
maintainers = [
    { name = "Théo Roncalli", email = "theo.roncalli@labri.fr" },
]
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Framework :: IPython",
    "Framework :: Matplotlib",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research"
]
requires-python = ">=3.7"
dependencies = [
    "importlib-metadata; python_version < '3.8'",
    "importlib_resources; python_version < '3.9'",
    "typing-extensions>=4.0",
    "numpy>=1.21",
    "pandas>=1.3.5",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "networkx>=2.1",
    "matplotlib>=3.5",
    "anndata>=0.8",
    "boolean.py>=4.0",
    "clingo>=5.6",
]
keywords = [
    "bioinformatics",
    "systems-biology",
    "single-cell",
    "rnaseq",
    "atacseq",
    "boolean-networks",
    "anndata",
    "mudata",
    "gene-regulatory-networks",
    "bonesis",
]

[project.license-files]
paths = ["LICENSE"]

[project.optional-dependencies]
all = [
    "dd>=0.5.7,<0.6; python_version < '3.11'",
    "dd>=0.6; python_version >= '3.11'",
    "graphviz>=0.20",
    "mudata>=0.3.1",
    "multiprocess>=0.70.18",
    "pydot>=3.0.2",
    "igraph>=0.10",
    "leidenalg>=0.10",
    "numba>=0.60; python_version >= '3.10'",
    "seaborn>=0.11",
    "scikit-misc>=0.5; python_version >= '3.10'",
    "umap-learn>=0.5",
    "mpbn>=4.1",
]
bdd = [
    "dd>=0.5.7,<0.6; python_version < '3.11'",
    "dd>=0.6; python_version >= '3.11'",
]
graphviz = [ "graphviz>=0.20" ]
mudata = [ "mudata>=0.3.1" ]
bn = [
    "mpbn>=4.1",
]
omics = [
    "igraph>=0.10",
    "leidenalg>=0.10",
    "numba>=0.60; python_version >= '3.10'",
    "scikit-misc>=0.5; python_version >= '3.10'",
    "umap-learn>=0.5",
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src/bonesistools",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = [ "src/bonesistools" ]
artifacts = [
    "src/bonesistools/py.typed",
    "src/bonesistools/**/*.pyi",
    "src/bonesistools/resources/hcop/data/*.tsv.gz",
    "src/bonesistools/resources/ncbi/data/gi/*.tsv.gz",
    "src/bonesistools/omics/input_output/*.json",
]

[project.urls]
Repository = "https://github.com/bnediction/bonesistools"

[tool.black]
target-version = ["py37"]

[tool.ruff]
target-version = "py37"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
typing-modules = ["bonesistools._compat"]

[tool.ruff.lint.per-file-ignores]
"src/bonesistools/omics/input_output/datasets.json" = ["E501"]

[tool.pyright]
typeCheckingMode = "standard"
include = ["src/bonesistools"]
exclude = [
    "**/__pycache__",
    "**/.*",
    "**/node_modules",
    ".git",
    ".pytest_cache",
    "build",
    "dist",
    "tests",
]
extraPaths = ["src"]
pythonVersion = "3.13"
